website-src/custom-styles.scss
@import 'config.scss';

@import '../node_modules/mq-scss/mq';
@import '../grid';

body {
	padding: 0 20px;
}

.wrapper {
	max-width: bp('page');
}

footer {
	margin-bottom: 0;
}

@for $i from 1 through length($colors) {
    .-color-#{$i} {
        background-color: nth($colors,$i);
    }
}

.grid {
	min-height: 100px;
}

